# MeshSkinner

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mesh_skinner.cpp  mesh_skinner.h
src/facade/: json_facade.cpp  json_facade.h  math_facade.cpp  math_facade.h  obj_facade.cpp  obj_facade.h
src/model/: Mesh.h  Skeleton.h  skeleton.cpp  skinning_data.cpp  skinning_data.h
src/test/: test_framework.cpp  test_framework.h  test_main.cpp  test_mesh.cpp  test_mesh_loading.cpp  test_skeleton.cpp  test_skinner.cpp  test_skinning_data.cpp  test_skinning_operations.cpp  test_utils.cpp  test_utils.h
